gcc/testsuite/gcc.target/aarch64/target_attr_17.c
__attribute__((target("invalid-attr-string")))
int
foo (int a)
{
  return a + 5;
}

/* { dg-error "target attribute.*is invalid" "" { target *-*-* } 0 } */